package org.formation.projet_aziaka_christian.model;

public enum     AccountType {
    CURRENT,
    SAVINGS
}
